--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@ Ultimo, NSW 2007</p>
 
 <h3>Recent News</h3>
 	  <ul>
-     <li><strong>10 Nov 2023</strong> Our paper, Stability analysis of trajectories on manifolds with applications to observers and controller design, has been accepted to <em>IEEE Transactions on Automatic Control</em>.</li>
-     <li><strong>19 Sept 2023</strong> Our paper, Stability analysis of trajectories on manifolds with applications to observer and controller design, has been conditionally accepted to <em>IEEE Transactions on Automatic Control</em>.</li>
+     <li><strong>10 Nov 2023</strong> Our paper, Stability analysis of trajectories on manifolds with applications to observers and controller design, has been conditionally accepted to <em>IEEE Transactions on Automatic Control</em>.</li>
+     <li><strong>19 Sept 2023</strong> Our paper, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, has been accepted to <em>IEEE Transactions on Automatic Control</em> as Full Paper.</li>
      <li><strong>5 Aug 2023</strong> Our paper, entitled Identifiability implies robust, globally exponentially convergent on-line parameter estimation, has been accepted to <em>International Journal of Control</em>.</li>
      <li><strong>27 July 2023</strong> Our paper, entitled Enhancing prescribed performance of tracking control of using monotone tube boundaries, has been accepted to <em>Automatica</em>.</li>
      <li><strong>16 July 2023</strong> Our pre-conference workshop, Modern Adaptive Control and Estimation: From Theory to Application, has been accepted to IEEE Conference on Decision and Control.</li>      <li><strong>7 Apr 2023</strong> Our paper, entitled Attitude estimation from vector measurements: Necessary and sufficient conditions and convergent observer design, has been accepted to <em>IEEE Trans. on Automatic Control</em>.</li>
