--- a/publication.html
+++ b/publication.html
@@ -102,18 +102,20 @@
   <body>
 
 <div class="wrapper">
-<header>
-<h1>Bowen Yi</h1>
-衣博文 <br><br>
-      <p>Postdoctoral Research Fellow<br>
-      <a href="https://www.uts.edu.au/research/robotics-institute">Robotics Institute</a>
+    <header>
+        <h1>Bowen Yi</h1>
+        衣博文 <br><br>
+      <p>Assistant Professor<br>
+      <a href="https://www.polymtl.ca/ge/">Dept. Electrical Engineering</a>
        <br> 
-       University of Technology Sydney</p>
+       Polytechnique Montreal</p>
         
     <h3><a href="https://bwyi.github.io/">Home</a></h3>
         <h3><a href="research.html">Research</a> </h3>
         <h3><a href="publication.html">Publications</a></h3>
         <h3><a href="services.html">Services</a></h3>
+        <h3><a href="position.html">Positions</a></h3>
+
 <b>Social</b><br>
       <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i><span class="social-row1"><a href="mailto:B.YI@outlook.com" class="author-social" target="_blank">Email</a><br>
@@ -125,33 +127,35 @@
           <br>
         </div>
         <p><b>Contact:</b><br>
-Room 301, Level 9, Building 11<br>
-University of Technolgy Sydney<br>
-Ultimo, NSW 2007</p>
-<p>Tel: +61 04 6761 1727</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</header>
-<section>
+Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</p>
+        <p>Tel: +61 04 6761 1727</p>
+        <p>&nbsp;</p>
+      <p>&nbsp;</p>
+    </header>
+      <section>
 
      <h2><span class="cmu-sans-serif" style="color: darkblue;">Selected Publications   <div class="gray-line"></div> </span></h2>  
 
         <h3><span class="cmu-sans-serif">Preprints and submissions</span></h3>
         <div class="justified-text">
         <ol>
-          <li><u>Bowen Yi</u>, Yeman Fan, Dikai Liu and Jose G. Romero, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, submitted to <em>IEEE Trans. Robot.</em>, 2023. (under review)</li>
+          <li><u>Bowen Yi</u>, Yeman Fan, Dikai Liu and Jose G. Romero, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, submitted to <em>IEEE Trans. Robot.</em>, 2023. (revision request)</li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Jongwon Choi and Kwanghee Nam, A high performance globally exponentially stable sensorless observer for the IPMSM: Theoretical and experimental results, submitted to <em>Automatica</em>, 2022. (under review)</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>Int. J. Robust Nonlinear Control</em>, 2023. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
           <li><u>Bowen Yi</u> and Ian R. Manchester, On IMU preintegration: A nonlinear observer viewpoint and its application, submitted to <em>Systems & Control Letters</em>, 2023. (under review)</li>
+          <li>Romeo Ortega, <u>Bowen Yi</u>, Alexey Bobtsov, Anton Pyrkin and Marina Korotina, Adaptive state observers for a class of nonlinear systems: The non-triangular and non-state-affine case, submitted to
+<em>Systems & Control Letters</em>, September 2023. (under review)
+          <li><u>Bowen Yi</u>, Yeman Fan and Dikai Liu, A novel model for layer jamming-based continuum robots, submitted to <em>IEEE Conf. Robot. Autom.</em> (ICRA), September 2023. (under review)</li>
+          <li><u>Bowen Yi</u>, Chi Jin, Lei Wang, Guodong Shi, Viorela Ila and Ian R. Manchester, PEBO-SLAM: Observer design for visual inertial SLAM with convergence guarantees, submitted to <em>IEEE Trans. on Automatic Control</em>, June 2023.</li>
         </ol>
         </div>
         
         <h3><span class="cmu-sans-serif">Journal Papers</span></h3>
         <div class="justified-text">
         <ol>
+          <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Trans. Autom. Control</em>, pp. 1-16, 2023. </li>
           <li><u>Bowen Yi</u>, Lei Wang and Ian R. Manchester, Attitude estimation from vector measurements: Necessary and sufficient conditions and convergent observer design, <em>IEEE Trans. Autom. Control</em>, 2023. (accepted)</li>
           <li>Romeo Ortega, Laurent Praly, Stanislav Aranovskiy, <u>Bowen Yi</u> and Weidong Zhang, On dynamic regressor extension and mixing parameter estimators: Two Luenberger observers interpretations,<em> Automatica</em>, vol. 95, pp. 348–351, 2018. </li>
-          <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Trans. Autom. Control</em>, 2023. (accepted)</li>
           <li><u>Bowen Yi</u>, Ruigang Wang and Ian R. Manchester, Reduced-order nonlinear observers via contraction analysis and convex optimization,  <em>IEEE Trans. Autom. Control</em>, pp. 4045-4060, vol. 67, issue 8, August 2022.</li>
           <li>Romeo Ortega, <u>Bowen Yi</u>*, Slobodan N. Vukosavic, Kwanghee Nam and Jongwon Choi, A globally exponentially stable position observer for interior permanent magnet synchronous motors, <em>Automatica</em>, vol. 125, 109424, pp. 1-10, 2021.</li>
           <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, On state observers for nonlinear systems: A new design and a unifying framework, <em>IEEE Trans. Autom. Control</em>, vol. 64, pp. 1193-1120, 2019.</li>
@@ -159,8 +163,8 @@ Ultimo, NSW 2007</p>
           <li><u>Bowen Yi</u>, Chi Jin, and Ian R. Manchester, Globally convergent visual-feature range estimation with biased inertial measurements, <em>Automatica</em>, 2022. (accepted)</li>
           <li>Alexey Bobtsov, <u>Bowen Yi*</u> , Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, <em>IEEE Trans. Autom. Control</em>, pp. 1-8, Sept. 2022.</li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Dongjun Wu, and Weidong Zhang, Orbital stablization of nonlinear systems via Mexican sombrero energy shaping and pumping-and-damping injection, <em>Automatica, </em>vol. 112, 108661, pp. 1-9, 2020.</li>
-          <li>Dongjun Wu, <u>Bowen Yi</u> and Anders Rantzer, Stability analysis of trajectories on manifolds with applications to observer and controller design, <em>IEEE Trans. Autom. Control</em>, 2023. (conditionally accepted)</li>
           <li>Yi Shi, <u>Bowen Yi</u>, Wei Xie, and Weidong Zhang, Enhancing prescribed performance of tracking control using monotone tube boundaries, <em>Automatica, </em> accepted, 2023.</li>          
+          <li>Dongjun Wu, <u>Bowen Yi</u> and Anders Rantzer, Stability analysis of trajectories on manifolds with applications to observer and controller design, submitted to <em>IEEE Trans. Autom. Control</em>, 2023. (conditionally accepted)</li>          
           <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, Relaxing the conditions for parameter estimationbased observers of nonlinear systems via signal injection, <em>Syst. Control Lett.</em>, vol. 111, pp. 18–26, 2018. </li>
           <li>Romeo Ortega, <u>Bowen Yi</u> and Jose Guadalupe Romero, Robustification of nonlinear control systems <em>vis-à-vis</em> actuator dynamics: An immersion and invariance approach, <em>Syst. Control Lett.</em>, vol. 146, 104811, pp. 1{9, 2020.</li>
           <li>Jose G. Romero, Isaac Gandarilla, Victor Santibanez and<u> Bowen Yi</u>, A constructive procedure for orbital stabilization of a class of underactuated mechanical systems, <em>IEEE Trans. Control Syst. Techn.</em>, 2022.</li>
