--- a/services.html
+++ b/services.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -40,7 +41,6 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-29643011-3', 'auto');
       ga('send', 'pageview');
     </script>
@@ -48,7 +48,7 @@
     <!-- For all browsers -->
     <link rel="stylesheet" href="assets/css/academicons.min.css"/>
     <link rel="stylesheet" href="assets/css/academicons.css"/>
-
+    
     <style>
       button.accordion {
       font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -90,59 +90,44 @@
         flex-wrap: wrap;
         justify-content: space-between;
       }
+    .social-row21 {display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+}
+.social-row3 {display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+}
     .social-row1 {        display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
 }
-    .social-row2 {        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
-    .social-row3 {        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
-.social-row11 {display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
-.social-row11 {display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
-.social-row21 {display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
-    .social-row4 {        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
-.social-row22 {display: flex;
+.social-row2 {display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
 }
     </style>
   </head>
-
-  
   <body>
 
 
 
 <div class="wrapper">
-<header>
-<h1>Bowen Yi</h1>
-衣博文 <br><br>
-      <p>Postdoctoral Research Fellow<br>
-      <a href="https://www.uts.edu.au/research/robotics-institute">Robotics Institute</a>
+
+    <header>
+        <h1>Bowen Yi</h1>
+        衣博文 <br><br>
+      <p>Assistant Professor<br>
+      <a href="https://www.polymtl.ca/ge/">Dept. Electrical Engineering</a>
        <br> 
-       University of Technology Sydney</p>
+       Polytechnique Montreal</p>
         
     <h3><a href="https://bwyi.github.io/">Home</a></h3>
         <h3><a href="research.html">Research</a> </h3>
         <h3><a href="publication.html">Publications</a></h3>
         <h3><a href="services.html">Services</a></h3>
+        <h3><a href="position.html">Positions</a></h3>
+
 <b>Social</b><br>
       <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i><span class="social-row1"><a href="mailto:B.YI@outlook.com" class="author-social" target="_blank">Email</a><br>
@@ -154,15 +139,12 @@
           <br>
         </div>
         <p><b>Contact:</b><br>
-Room 301, Level 9, Building 11<br>
-University of Technolgy Sydney<br>
-Ultimo, NSW 2007</p>
-<p>Tel: +61 04 6761 1727</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</header>
-<section>
-
+Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</p>
+        <p>Tel: +61 04 6761 1727</p>
+        <p>&nbsp;</p>
+      <p>&nbsp;</p>
+    </header>
+      <section>
 
 
 
@@ -214,9 +196,26 @@ Ultimo, NSW 2007</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
 
+<p>&nbsp;</p>
+        <p>&nbsp;</p>
+<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Coming soon.</p></div><br>
       </section>
     </div>
+    <script src="javascripts/scale.fix.js"></script>
+    <script> 
+    var acc = document.getElementsByClassName("accordion");
+    var i;
 
+    for (i = 0; i < acc.length; i++) {
+        acc[i].onclick = function(){
+            this.classList.toggle("active");
+            this.parentNode.nextElementSibling.classList.toggle("show");
+      }
+    }
+    </script>
+	  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=vQXuWikfOWCHs-VDFCJWVULbHsq38PWBBDmeLmTSBK4"></script>
   </body>
 </html>
