--- a/publication.html
+++ b/publication.html
@@ -145,6 +145,7 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
           <li><u>Bowen Yi</u> and Ian R. Manchester, On IMU preintegration: A nonlinear observer viewpoint and its application, submitted to <em>Systems & Control Letters</em>, 2023. (under review)</li>
           <li>Romeo Ortega, <u>Bowen Yi</u>, Alexey Bobtsov, Anton Pyrkin and Marina Korotina, Adaptive state observers for a class of nonlinear systems: The non-triangular and non-state-affine case, submitted to
 <em>Systems & Control Letters</em>, September 2023. (under review)
+          <li>Fletcher Fan, <u>Bowen Yi</u>*, David Rye, Guodong Shi and Ian R. Manchester, Learning stable Koopman embeddings for identification and control, submitted to <em>Automatica</em>, January 2024. (under review) </li>
           <li><u>Bowen Yi</u>, Yeman Fan and Dikai Liu, A novel model for layer jamming-based continuum robots, submitted to <em>IEEE Conf. Robot. Autom.</em> (ICRA), September 2023. (under review)</li>
           <li><u>Bowen Yi</u>, Chi Jin, Lei Wang, Guodong Shi, Viorela Ila and Ian R. Manchester, PEBO-SLAM: Observer design for visual inertial SLAM with convergence guarantees, submitted to <em>IEEE Trans. on Automatic Control</em>, June 2023.</li>
         </ol>
