--- a/index.html
+++ b/index.html
@@ -164,10 +164,7 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
       
      <h2><span class="cmu-sans-serif" style="color: darkblue;">About Me   <div class="gray-line"></div> </span></h2>  
     <div class="justified-text">
-      <p>I will be joining the Department of Electrical Engineering, Polytechnique Montréal, Canada, as an Assistant Professor in February 2024. </p>
-
-      
-      <p> I obtained my PhD from <a href="https://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, China in Sept 2019. Subsequently, I held research positions at several institutes, such as <a href="https://www.l2s.centralesupelec.fr/">Laboratoire des Signaux et Systèmes</a>, <a href="http://www.cnrs.fr/">CNRS</a>-<a href="https://www.centralesupelec.fr/">CentraleSupélec</a>, France; <a href="https://www.sydney.edu.au/engineering/our-research/robotics-and-intelligent-systems/australian-centre-for-field-robotics.html">Australian Centre for Robotics</a>, <a href="https://www.sydney.edu.au/">The University of Sydney</a>; and <a href="https://www.uts.edu.au/research/robotics-institute">Robotics Institute</a>, University of Technology Sydney, Australia. 
+      <p>I am a tenure-track Assistant Professor at the Department of Electrical Engineering, Polytechnique Montréal, Canada. I obtained my PhD from <a href="https://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, China in Sept 2019. Subsequently, I held research positions at several institutes, such as <a href="https://www.l2s.centralesupelec.fr/">Laboratoire des Signaux et Systèmes</a>, <a href="http://www.cnrs.fr/">CNRS</a>-<a href="https://www.centralesupelec.fr/">CentraleSupélec</a>, France; <a href="https://www.sydney.edu.au/engineering/our-research/robotics-and-intelligent-systems/australian-centre-for-field-robotics.html">Australian Centre for Robotics</a>, <a href="https://www.sydney.edu.au/">The University of Sydney</a>; and <a href="https://www.uts.edu.au/research/robotics-institute">Robotics Institute</a>, University of Technology Sydney, Australia. 
       </p>
       <p>
       My research interests include the estimation and control of nonlinear systems, with special emphasis on robotics. 
@@ -194,6 +191,7 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
 
 <h3>Recent News</h3>
 	  <ul>
+	  <li><strong>29 Jan 2024</strong> Our paper, A novel model for layer jamming-based continuum robots, has been accepted to <em>IEEE International Conference on Robotics and Automation (ICRA)</em>. See you in Yokohama.</li>	  
 	  <li><strong>10 Nov 2023</strong> Our paper, Stability analysis of trajectories on manifolds with applications to observers and controller design, has been conditionally accepted to <em>IEEE Transactions on Automatic Control</em>.</li>	  
 	  <li><strong>19 Sept 2023</strong> Our paper, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, has been accepted to <em>IEEE Transactions on Automatic Control</em> as Full Paper.</li>
 	  <li><strong>5 Aug 2023</strong> Our paper, entitled Identifiability implies robust, globally exponentially convergent on-line parameter estimation, has been accepted to <em>International Journal of Control</em>.</li>
