--- a/publication.html
+++ b/publication.html
@@ -139,8 +139,9 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
         <h3><span class="cmu-sans-serif">Preprints and submissions</span></h3>
         <div class="justified-text">
         <ol>
-          <li><u>Bowen Yi</u>, Yeman Fan, Dikai Liu and Jose G. Romero, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, submitted.</li>
-          <li><u>Bowen Yi</u>, Romeo Ortega, Jongwon Choi and Kwanghee Nam, A high performance globally exponentially stable sensorless observer for the IPMSM: Theoretical and experimental results, submitted to <em>Automatica</em>, 2022. (under review)</li>
+          <li>Dongjun Wu, <u>Bowen Yi</u>, and Ian R. Manchester, Control contraction metrics on Lie groups, submitted to <em>IEEE Conference on Decision and Control</em>, March 2024.</li>
+          <li><u>Bowen Yi</u>, Yeman Fan, Dikai Liu, and Jose G. Romero, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, submitted.</li>
+          <li><u>Bowen Yi</u>, Romeo Ortega, Jongwon Choi, and Kwanghee Nam, A high performance globally exponentially stable sensorless observer for the IPMSM: Theoretical and experimental results, submitted to <em>Automatica</em>, 2022. (under review)</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>Int. J. Robust Nonlinear Control</em>, 2023. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
           <li><u>Bowen Yi</u> and Ian R. Manchester, On IMU preintegration: A nonlinear observer viewpoint and its application, submitted to <em>Systems & Control Letters</em>, 2023. (under review)</li>
           <li>Romeo Ortega, <u>Bowen Yi</u>, Alexey Bobtsov, Anton Pyrkin and Marina Korotina, Adaptive state observers for a class of nonlinear systems: The non-triangular and non-state-affine case, submitted to
