--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
 
 <h3>Recent News</h3>
 	  <ul>
+	  <li><strong>9 April 2024</strong> <span class="cmu-sans-serif" style="color: darkblue;">NSERC has funded our group with a 5-year Discovery Grant to explore nonlinear estimation.</span></li>	  
 	  <li><strong>29 Jan 2024</strong> Our paper, A novel model for layer jamming-based continuum robots, has been accepted to <em>IEEE International Conference on Robotics and Automation (ICRA)</em>. See you in Yokohama.</li>	  
 	  <li><strong>10 Nov 2023</strong> Our paper, Stability analysis of trajectories on manifolds with applications to observers and controller design, has been conditionally accepted to <em>IEEE Transactions on Automatic Control</em>.</li>	  
 	  <li><strong>19 Sept 2023</strong> Our paper, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, has been accepted to <em>IEEE Transactions on Automatic Control</em> as Full Paper.</li>
