--- a/publication.html
+++ b/publication.html
@@ -141,12 +141,10 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
         <ol>
           <li><u>Bowen Yi</u>, Yeman Fan, Dikai Liu, and Jose G. Romero, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, submitted.</li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Jongwon Choi, and Kwanghee Nam, A high performance globally exponentially stable sensorless observer for the IPMSM: Theoretical and experimental results, submitted to <em>Automatica</em>, 2022. (under review)</li>
-          <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>Int. J. Robust Nonlinear Control</em>, 2023. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
           <li><u>Bowen Yi</u> and Ian R. Manchester, On IMU preintegration: A nonlinear observer viewpoint and its application, submitted to <em>Systems & Control Letters</em>, 2023. (under review)</li>
           <li>Romeo Ortega, <u>Bowen Yi</u>, Alexey Bobtsov, Anton Pyrkin and Marina Korotina, Adaptive state observers for a class of nonlinear systems: The non-triangular and non-state-affine case, submitted to
 <em>Systems & Control Letters</em>, September 2023. (under review)
           <li>Fletcher Fan, <u>Bowen Yi</u>*, David Rye, Guodong Shi and Ian R. Manchester, Learning stable Koopman embeddings for identification and control, submitted to <em>Automatica</em>, January 2024. (under review) </li>
-          <li><u>Bowen Yi</u>, Yeman Fan and Dikai Liu, A novel model for layer jamming-based continuum robots, submitted to <em>IEEE Conf. Robot. Autom.</em> (ICRA), September 2023. (under review)</li>
           <li><u>Bowen Yi</u>, Chi Jin, Lei Wang, Guodong Shi, Viorela Ila and Ian R. Manchester, PEBO-SLAM: Observer design for visual inertial SLAM with convergence guarantees, submitted to <em>IEEE Trans. on Automatic Control</em>, June 2023.</li>
         </ol>
         </div>
@@ -168,6 +166,7 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
           <li>Dongjun Wu, <u>Bowen Yi</u> and Anders Rantzer, Stability analysis of trajectories on manifolds with applications to observer and controller design, <em>IEEE Trans. Autom. Control</em>, pp. 1-8, 2024. (to appear)</li>          
           <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, Relaxing the conditions for parameter estimationbased observers of nonlinear systems via signal injection, <em>Syst. Control Lett.</em>, vol. 111, pp. 18–26, 2018. </li>
           <li>Romeo Ortega, <u>Bowen Yi</u> and Jose Guadalupe Romero, Robustification of nonlinear control systems <em>vis-à-vis</em> actuator dynamics: An immersion and invariance approach, <em>Syst. Control Lett.</em>, vol. 146, 104811, pp. 1{9, 2020.</li>
+          <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, <em>Int. J. Robust Nonlinear Control</em>, 2024. </li>
           <li>Jose G. Romero, Isaac Gandarilla, Victor Santibanez and<u> Bowen Yi</u>, A constructive procedure for orbital stabilization of a class of underactuated mechanical systems, <em>IEEE Trans. Control Syst. Techn.</em>, 2022.</li>
           <li>Xiaodong Shao, Qinglei Hu, Yang Shi and <u>Bowen Yi</u>, Data-driven immersion and invariance adaptive attitude control for rigid bodies with double-level state constraints, <em>IEEE Trans. Control Syst. Techn.</em>, 2021. </li>
           <li>Romeo Ortega, <u>Bowen Yi</u>*, Jose Guadalupe Romero and Alessandro Astolfi, Orbital stabilization of nonlinear systems via the immersion and invariance technique, <em>Int. J. Robust Nonlinear Control</em>, vol. 30, issue 5, pp. 1850–1871, 2020.</li>
@@ -187,7 +186,8 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
         <h3><span class="cmu-sans-serif">Conference Papers</span></h3>
         <div class="justified-text">
         <ol>
-                    <li>Dongjun Wu, <u>Bowen Yi</u>, and Ian R. Manchester, Control contraction metrics on Lie groups, <em>IEEE Conference on Decision and Control</em>, Dec 2024.</li>
+          <li>Dongjun Wu, <u>Bowen Yi</u>, and Ian R. Manchester, Control contraction metrics on Lie groups, <em>IEEE Conference on Decision and Control</em>, Dec 2024.</li>
+          <li><u>Bowen Yi</u>, Yeman Fan and Dikai Liu, A novel model for layer jamming-based continuum robots, <em>IEEE Conf. Robot. Autom.</em> (ICRA), May 2024. </li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Jongwon Choi and Kwanghee Nam, A novel globally expoentially
           stable observer for sensorless control of IPMSM via Kreisselmeier's extension, <em> the 22nd IFAC World Congress</em>, Yokohama, Japan, 2023.
           <li><u>Bowen Yi</u>, Lei Wang and Ian R. Manchester, Attitude estimation from vector measurements: Neces-
