--- a/services.html
+++ b/services.html
@@ -152,6 +152,11 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
 
         <p class="social-row2">- Teaching:</p>
         <ul>
+        <li>Lecture
+            <ul>
+              <li>ELE6202: Multivariable Systems, Polytechnique Montreal, Fall 2024</li>
+            </ul>
+          </li>
           <li>Tutor (for Lab/Tutorial)
             <ul>
               <li>AMME 3500: Systems Dynamics and Control, USYD, Sydney, Australia, Semmester 1, 2020</li>
