--- a/publication.html
+++ b/publication.html
@@ -139,7 +139,6 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
         <h3><span class="cmu-sans-serif">Preprints and submissions</span></h3>
         <div class="justified-text">
         <ol>
-          <li><u>Bowen Yi</u>, Yeman Fan, Dikai Liu, and Jose G. Romero, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, submitted.</li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Jongwon Choi, and Kwanghee Nam, A high performance globally exponentially stable sensorless observer for the IPMSM: Theoretical and experimental results, submitted to <em>Automatica</em>, 2022. (under review)</li>
           <li><u>Bowen Yi</u> and Ian R. Manchester, On IMU preintegration: A nonlinear observer viewpoint and its application, submitted to <em>Systems & Control Letters</em>, 2023. (under review)</li>
           <li>Romeo Ortega, <u>Bowen Yi</u>, Alexey Bobtsov, Anton Pyrkin and Marina Korotina, Adaptive state observers for a class of nonlinear systems: The non-triangular and non-state-affine case, submitted to
@@ -164,6 +163,7 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
           <li><u>Bowen Yi</u>, Romeo Ortega, Dongjun Wu, and Weidong Zhang, Orbital stablization of nonlinear systems via Mexican sombrero energy shaping and pumping-and-damping injection, <em>Automatica, </em>vol. 112, 108661, pp. 1-9, 2020.</li>
           <li>Yi Shi, <u>Bowen Yi</u>, Wei Xie, and Weidong Zhang, Enhancing prescribed performance of tracking control using monotone tube boundaries, <em>Automatica, </em> accepted, 2023.</li>          
           <li>Dongjun Wu, <u>Bowen Yi</u> and Anders Rantzer, Stability analysis of trajectories on manifolds with applications to observer and controller design, <em>IEEE Trans. Autom. Control</em>, pp. 1-8, 2024. (to appear)</li>          
+          <li><u>Bowen Yi</u>, Yeman Fan, Dikai Liu, and Jose G. Romero, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, <em>IEEE Trans. Autom. Sci. Eng.</em>, 2024.</li>
           <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, Relaxing the conditions for parameter estimationbased observers of nonlinear systems via signal injection, <em>Syst. Control Lett.</em>, vol. 111, pp. 18–26, 2018. </li>
           <li>Romeo Ortega, <u>Bowen Yi</u> and Jose Guadalupe Romero, Robustification of nonlinear control systems <em>vis-à-vis</em> actuator dynamics: An immersion and invariance approach, <em>Syst. Control Lett.</em>, vol. 146, 104811, pp. 1{9, 2020.</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, <em>Int. J. Robust Nonlinear Control</em>, 2024. </li>
