--- a/index.html
+++ b/index.html
@@ -191,8 +191,11 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
 
 <h3>Recent News</h3>
 	  <ul>
-	  <li><strong>9 April 2024</strong> <span class="cmu-sans-serif" style="color: darkred;">NSERC has funded our group with a 5-year Discovery Grant to explore nonlinear estimation.</span> (A scalable framework for nonlinear observer design in robotic systems, 2024 - 2029.)</li>	  
-	  <li><strong>21 Apr 2024</strong> Our paper, Stability analysis of trajectories on manifolds with applications to observers and controller design, has been accepted to <em>IEEE Transactions on Automatic Control</em>.</li>	  
+	  <li><strong>9 April 2024</strong> <span class="cmu-sans-serif" style="color: darkred;">NSERC has funded our group with a 5-year Discovery Grant to explore nonlinear estimation.</span> (A scalable framework for nonlinear observer design in robotic systems, 2024 - 2029.)</li>	  		  
+	<li><strong>13 Sept 2024</strong> Our paper, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, has been accepted to <em>IEEE Transactions on Automation Science and Engineering</em>.</li>	  
+	<li><strong>24 July 2024</strong> Our paper, Control contraction metrics on Lie groups, has been accepted to <em>IEEE Conferece on Decision and Control</em>.</li>	  
+	<li><strong>15 June 2024</strong> Our survey paper on stiffening approaches for continuum robots has been accepted to <em>Robotics and Computer-Integrated Manufacturing</em>.</li>	  
+        <li><strong>21 Apr 2024</strong> Our paper, Stability analysis of trajectories on manifolds with applications to observers and controller design, has been accepted to <em>IEEE Transactions on Automatic Control</em>.</li>	  
 	  <li><strong>29 Jan 2024</strong> Our paper, A novel model for layer jamming-based continuum robots, has been accepted to <em>IEEE International Conference on Robotics and Automation (ICRA)</em>. See you in Yokohama.</li>	  
 	  <li><strong>19 Sept 2023</strong> Our paper, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, has been accepted to <em>IEEE Transactions on Automatic Control</em> as Full Paper.</li>
 	  <li><strong>5 Aug 2023</strong> Our paper, entitled Identifiability implies robust, globally exponentially convergent on-line parameter estimation, has been accepted to <em>International Journal of Control</em>.</li>
