--- a/publication.html
+++ b/publication.html
@@ -144,7 +144,6 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
           <li>Romeo Ortega, <u>Bowen Yi</u>, Alexey Bobtsov, Anton Pyrkin and Marina Korotina, Adaptive state observers for a class of nonlinear systems: The non-triangular and non-state-affine case, submitted to
 <em>Systems & Control Letters</em>, September 2023. (under review)
           <li>Fletcher Fan, <u>Bowen Yi</u>*, David Rye, Guodong Shi and Ian R. Manchester, Learning stable Koopman embeddings for identification and control, submitted to <em>Automatica</em>, January 2024. (under review) </li>
-          <li><u>Bowen Yi</u>, Chi Jin, Lei Wang, Guodong Shi, Viorela Ila and Ian R. Manchester, PEBO-SLAM: Observer design for visual inertial SLAM with convergence guarantees, submitted to <em>IEEE Trans. on Automatic Control</em>, June 2023.</li>
         </ol>
         </div>
         
@@ -154,6 +153,7 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
           <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Trans. Autom. Control</em>, pp. 1-16, 2023. </li>
           <li><u>Bowen Yi</u>, Lei Wang and Ian R. Manchester, Attitude estimation from vector measurements: Necessary and sufficient conditions and convergent observer design, <em>IEEE Trans. Autom. Control</em>, 2023. (accepted)</li>
           <li>Romeo Ortega, Laurent Praly, Stanislav Aranovskiy, <u>Bowen Yi</u> and Weidong Zhang, On dynamic regressor extension and mixing parameter estimators: Two Luenberger observers interpretations,<em> Automatica</em>, vol. 95, pp. 348–351, 2018. </li>
+          <li><u>Bowen Yi</u>, Chi Jin, Lei Wang, Guodong Shi, Viorela Ila and Ian R. Manchester, PEBO-SLAM: Observer design for visual inertial SLAM with convergence guarantees, <em>IEEE Trans. on Automatic Control</em>, pp. 1-16, September 2024.</li> 
           <li><u>Bowen Yi</u>, Ruigang Wang and Ian R. Manchester, Reduced-order nonlinear observers via contraction analysis and convex optimization,  <em>IEEE Trans. Autom. Control</em>, pp. 4045-4060, vol. 67, issue 8, August 2022.</li>
           <li>Romeo Ortega, <u>Bowen Yi</u>*, Slobodan N. Vukosavic, Kwanghee Nam and Jongwon Choi, A globally exponentially stable position observer for interior permanent magnet synchronous motors, <em>Automatica</em>, vol. 125, 109424, pp. 1-10, 2021.</li>
           <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, On state observers for nonlinear systems: A new design and a unifying framework, <em>IEEE Trans. Autom. Control</em>, vol. 64, pp. 1193-1120, 2019.</li>
