--- a/publication.html
+++ b/publication.html
@@ -150,8 +150,9 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
         <div class="justified-text">
         <ol>
           <li><u>Bowen Yi</u>, Romeo Ortega, Jongwon Choi, and Kwanghee Nam, A high performance globally exponentially stable sensorless observer for the IPMSM: Theoretical and experimental results, <em>Automatica</em>, vol. 174, Art. no. 112138, 2025. </li>
-          <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Trans. Autom. Control</em>, pp. 1-16, 2023. </li>
-          <li><u>Bowen Yi</u>, Lei Wang and Ian R. Manchester, Attitude estimation from vector measurements: Necessary and sufficient conditions and convergent observer design, <em>IEEE Trans. Autom. Control</em>, 2023. (accepted)</li>
+          <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Trans. Autom. Control</em>, vol. 69, issue 7, pp. 4336–4351,
+July 2024. </li>
+          <li><u>Bowen Yi</u>, Lei Wang and Ian R. Manchester, Attitude estimation from vector measurements: Necessary and sufficient conditions and convergent observer design, <em>IEEE Trans. Autom. Control</em>, vol. 69, issue 1, pp. 511–518, January 2024.</li>
           <li>Romeo Ortega, Laurent Praly, Stanislav Aranovskiy, <u>Bowen Yi</u> and Weidong Zhang, On dynamic regressor extension and mixing parameter estimators: Two Luenberger observers interpretations,<em> Automatica</em>, vol. 95, pp. 348–351, 2018. </li>
           <li><u>Bowen Yi</u>, Chi Jin, Lei Wang, Guodong Shi, Viorela Ila and Ian R. Manchester, PEBO-SLAM: Observer design for visual inertial SLAM with convergence guarantees, <em>IEEE Trans. on Automatic Control</em>, pp. 1-16, September 2024.</li> 
           <li><u>Bowen Yi</u>, Ruigang Wang and Ian R. Manchester, Reduced-order nonlinear observers via contraction analysis and convex optimization,  <em>IEEE Trans. Autom. Control</em>, pp. 4045-4060, vol. 67, issue 8, August 2022.</li>
@@ -162,11 +163,11 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
           <li>Alexey Bobtsov, <u>Bowen Yi*</u> , Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, <em>IEEE Trans. Autom. Control</em>, vol. 67, pp. 4746-4753, Sept. 2022.</li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Dongjun Wu, and Weidong Zhang, Orbital stablization of nonlinear systems via Mexican sombrero energy shaping and pumping-and-damping injection, <em>Automatica, </em>vol. 112, 108661, pp. 1-9, 2020.</li>
           <li>Yi Shi, <u>Bowen Yi</u>, Wei Xie, and Weidong Zhang, Enhancing prescribed performance of tracking control using monotone tube boundaries, <em>Automatica, </em> accepted, 2023.</li>          
-          <li>Dongjun Wu, <u>Bowen Yi</u> and Anders Rantzer, Stability analysis of trajectories on manifolds with applications to observer and controller design, <em>IEEE Trans. Autom. Control</em>, pp. 1-8, 2024. (to appear)</li>          
-          <li><u>Bowen Yi</u>, Yeman Fan, Dikai Liu, and Jose G. Romero, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, <em>IEEE Trans. Autom. Sci. Eng.</em>, 2024.</li>
+          <li>Dongjun Wu, <u>Bowen Yi</u> and Anders Rantzer, Stability analysis of trajectories on manifolds with applications to observer and controller design, <em>IEEE Trans. Autom. Control</em>, ol. 69, no. 10,
+pp. 7104–7111, October 2024.</li>          
+          <li><u>Bowen Yi</u>, Yeman Fan, Dikai Liu, and Jose G. Romero, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, <em>IEEE Trans. Autom. Sci. Eng.</em>, 2024. (early access)</li>
           <li><u>Bowen Yi</u> and Ian R. Manchester, On IMU preintegration: A nonlinear observer viewpoint and its application, <em>Systems & Control Letters</em>, vol. 193, Art. no. 105933, 2024.</li>
-          <li>Romeo Ortega, <u>Bowen Yi</u>, Alexey Bobtsov, Anton Pyrkin and Marina Korotina, Adaptive state observers for a class of nonlinear systems: The non-triangular and non-state-affine case, submitted to
-<em>Systems & Control Letters</em>, vol. 196, Art. no. 106020, 2025.
+          <li>Romeo Ortega, <u>Bowen Yi</u>, Alexey Bobtsov, Anton Pyrkin and Marina Korotina, Adaptive state observers for a class of nonlinear systems: The non-triangular and non-state-affine case, <em>Systems & Control Letters</em>, vol. 196, Art. no. 106020, 2025.
           <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, Relaxing the conditions for parameter estimationbased observers of nonlinear systems via signal injection, <em>Syst. Control Lett.</em>, vol. 111, pp. 18–26, 2018. </li>
           <li>Romeo Ortega, <u>Bowen Yi</u> and Jose Guadalupe Romero, Robustification of nonlinear control systems <em>vis-à-vis</em> actuator dynamics: An immersion and invariance approach, <em>Syst. Control Lett.</em>, vol. 146, 104811, pp. 1{9, 2020.</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, <em>Int. J. Robust Nonlinear Control</em>, 2024. </li>
