--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
 <h3>Recent News</h3>
 	  <ul>
 	  <li><strong>9 April 2024</strong> <span class="cmu-sans-serif" style="color: darkred;">NSERC has funded our group with a 5-year Discovery Grant to explore nonlinear estimation.</span> (A scalable framework for nonlinear observer design in robotic systems, 2024 - 2029.)</li>	  		  
-	<li><strong>18 Sept 2024</strong> Our paper, On IMU preintegration: A nonlinear observer viewpoint and its applications, has been accepted to <em>Systems & Control Letters</em>.</li>	  
+	<li><strong>17 Jan 2025</strong> Our paper, A high performance globally exponentially convergent sensorless observer for the IPMSM: Theoretical and experimental results, has been accepted to <em>Automatica</em>.</li>	  
+	<li><strong>15 Jan 2025</strong> Our paper, Adaptive state observers for a class of nonlinear systems: The non-triangular and non-state-affine case, has been accepted to <em>Systems & Control Letters</em>.</li>	  	
+        <li><strong>18 Sept 2024</strong> Our paper, On IMU preintegration: A nonlinear observer viewpoint and its applications, has been accepted to <em>Systems & Control Letters</em>.</li>	  
 	<li><strong>14 Sept 2024</strong> Our paper, PEBO-SLAM: Observer design for visual inertial SLAM with convergence guarantees, has been accepted to <em>IEEE Transactions on Automatic Control</em> as Full paper.</li>	  
         <li><strong>13 Sept 2024</strong> Our paper, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, has been accepted to <em>IEEE Transactions on Automation Science and Engineering</em>.</li>	  
 	<li><strong>24 July 2024</strong> Our paper, Control contraction metrics on Lie groups, has been accepted to <em>IEEE Conferece on Decision and Control</em>.</li>	  
