--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</
 <h3>Recent News</h3>
 	  <ul>
 	  <li><strong>9 April 2024</strong> <span class="cmu-sans-serif" style="color: darkred;">NSERC has funded our group with a 5-year Discovery Grant to explore nonlinear estimation.</span> (A scalable framework for nonlinear observer design in robotic systems, 2024 - 2029.)</li>	  		  
+	  <li><strong>Sept 2024</strong> <span class="cmu-sans-serif" style="color: darkred;">I was awarded the Discovery Early Career Researcher Award (DECRA) by the Australian Research Council.</span> (A scalable framework for nonlinear observer design in robotic systems, 2024 - 2029.)</li>	  		  
 	<li><strong>17 Jan 2025</strong> Our paper, A high performance globally exponentially convergent sensorless observer for the IPMSM: Theoretical and experimental results, has been accepted to <em>Automatica</em>.</li>	  
 	<li><strong>15 Jan 2025</strong> Our paper, Adaptive state observers for a class of nonlinear systems: The non-triangular and non-state-affine case, has been accepted to <em>Systems & Control Letters</em>.</li>	  	
         <li><strong>18 Sept 2024</strong> Our paper, On IMU preintegration: A nonlinear observer viewpoint and its applications, has been accepted to <em>Systems & Control Letters</em>.</li>	  
