--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@
 
 </section>
 
-  <!-- Visitor map -->
-  <div style="margin-top:40px;">
-    <script type="text/javascript" id="clustrmaps"
-      src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=170&t=n&d=vQXuWikfOWCHs-VDFCJWVULbHsq38PWBBDmeLmTSBK4&cmn=ed5e0e&cmo=1f9138">
-    </script>
-  </div>
-  
+<!-- Visitor statistics (hidden) -->
+<div style="display:none;">
+  <script type="text/javascript" id="clustrmaps"
+    src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=170&t=n&d=vQXuWikfOWCHs-VDFCJWVULbHsq38PWBBDmeLmTSBK4&cmn=ed5e0e&cmo=1f9138">
+  </script>
+</div>
+
 </body>
 </html>
 
