--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="justified-text">
       <p>
         I am an <strong>Assistant Professor</strong> in Automatic Control at
-        <a href="https://www.polymtl.ca/ge/">Polytechnique Montréal</a>, Canada.
+        <a href="https://www.polymtl.ca/ge/">Polytechnique Montréal</a> (Faculty of Engineering of the Université de Montréal), Canada.
       </p>
 
       <p>
